# llm-benchmark-app

./: .gitignore  IMPLEMENTATION-PLAN.md  PRD.md  README.md  REFACTORING-PLAN.md  demo_metrics.py  pyproject.toml  requirements.txt  setup.py  vllm_benchmark.py
.cursor/rules/: architecture.mdc  coding-standards.mdc  design.mdc  error-handling.mdc
config/: default.yaml  quick-test.yaml  stress-test.yaml
configs/engines/: ollama.yaml  tgi.yaml  vllm.yaml
configs/scenarios/: long_prompt_long_completion.yaml  long_prompt_short_completion.yaml  short_prompt_long_completion.yaml  short_prompt_short_completion.yaml
data/: prompts.txt
docs/: ARCHITECTURE.md  CONVERSATION-REFACTORING.md  DRAFT.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_PLAN.md  LEGACY-VISUALIZATION-REFACTOR-PLAN.md  METRICS.md  METRICS_CHECKLIST.md  PHASE1_AGILE_PLAN.md  PHASE2_AGILE_PLAN.md  PHASE3_DRAFT_AGILE_PLAN.md  PLAN.md  PRD.md  PROJECT_STATUS_AND_PLAN.md  README.md  REFACTOR-PLAN-1.2.md  REFACTORING-PLAN.md  USER_STORIES.md
helm/ollama/: Chart.yaml  DEPLOYMENT-FIXES.md  DEPLOYMENT.md  README.md  test-deployment.sh  values.yaml
helm/tgi/: Chart.yaml  DEPLOYMENT-FIXES.md  DEPLOYMENT.md  README.md  values.yaml
helm/vllm/: Chart.yaml  DEPLOYMENT-FIXES.md  DEPLOYMENT.md  README.md  values.yaml
notebooks/: api_clients.py  benchmark_utils.py  env_utils.py  low_latency_chat.ipynb  visualization_utils.py
scripts/: README.md  benchmark_creative_writing.py  check_engines.py  demo_parallel_race.py  discover_models.py  infrastructure-validation.sh  run_benchmark.py  setup-dev-env.sh  test_pod_info.py  test_request.py  test_streaming.py  test_vllm_streaming.py
src/: __init__.py  api_clients.py  benchmarking.py  config.py  conversation_viz.py  metrics.py  orchestrator.py  reporting.py  results_organizer.py  service_discovery.py  visualization.py
src/adapters/: __init__.py  base_adapter.py  ollama_adapter.py  tgi_adapter.py  vllm_adapter.py
tests/: __init__.py
(+102 files in other folders)
